--- a/notebooks/10_Modelling/01_Why/A.ipynb
+++ b/notebooks/10_Modelling/01_Why/A.ipynb
@@ -154,15 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2177ca9",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T11:58:55.016284Z",
-     "iopub.status.busy": "2024-05-10T11:58:55.016119Z",
-     "iopub.status.idle": "2024-05-10T11:58:55.023598Z",
-     "shell.execute_reply": "2024-05-10T11:58:55.023352Z"
-    },
     "papermill": {
      "duration": 0.0111,
      "end_time": "2024-05-10T11:58:55.024427",
@@ -172,122 +166,20 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PRICE</th>\n",
-       "      <th>BEDROOMS</th>\n",
-       "      <th>BATHROOMS</th>\n",
-       "      <th>GARAGE</th>\n",
-       "      <th>FLOOR_AREA</th>\n",
-       "      <th>BUILD_YEAR</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ADDRESS</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1 Datchet Turn</th>\n",
-       "      <td>270000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>109</td>\n",
-       "      <td>2011.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1 McKenzie Corner</th>\n",
-       "      <td>470000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>279</td>\n",
-       "      <td>2005.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93 Centennial Avenue</th>\n",
-       "      <td>350000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>177</td>\n",
-       "      <td>2005.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98 Centennial Avenue</th>\n",
-       "      <td>441000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>195</td>\n",
-       "      <td>2004.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>204 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       PRICE  BEDROOMS  BATHROOMS  GARAGE  FLOOR_AREA  \\\n",
-       "ADDRESS                                                                 \n",
-       "1 Datchet Turn        270000         3          2     2.0         109   \n",
-       "1 McKenzie Corner     470000         4          2     2.0         279   \n",
-       "...                      ...       ...        ...     ...         ...   \n",
-       "93 Centennial Avenue  350000         4          2     2.0         177   \n",
-       "98 Centennial Avenue  441000         4          2     2.0         195   \n",
-       "\n",
-       "                      BUILD_YEAR  \n",
-       "ADDRESS                           \n",
-       "1 Datchet Turn            2011.0  \n",
-       "1 McKenzie Corner         2005.0  \n",
-       "...                          ...  \n",
-       "93 Centennial Avenue      2005.0  \n",
-       "98 Centennial Avenue      2004.0  \n",
-       "\n",
-       "[204 rows x 6 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ba2ff56f-1701-46e4-91d6-2e0e9e0c5758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('../../../data/house_perth/output/ml_simple.csv', index_col='ADDRESS')"
+   ]
   },
   {
    "attachments": {},
@@ -331,15 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5aa487d4",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T11:58:55.037293Z",
-     "iopub.status.busy": "2024-05-10T11:58:55.037046Z",
-     "iopub.status.idle": "2024-05-10T11:58:56.050559Z",
-     "shell.execute_reply": "2024-05-10T11:58:56.050154Z"
-    },
     "papermill": {
      "duration": 1.017169,
      "end_time": "2024-05-10T11:58:56.051576",
@@ -350,7 +236,19 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c83e62d-b9e5-4788-9b8d-d9fd0ca1ce3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model"
+   ]
   },
   {
    "attachments": {},
@@ -1337,9 +1235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (work)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "work"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1351,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
