--- a/notebooks/10_Modelling/01_Why/B.ipynb
+++ b/notebooks/10_Modelling/01_Why/B.ipynb
@@ -1374,9 +1374,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (work)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "work"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1388,7 +1388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
