--- a/notebooks/10_Modelling/02_Steps/B.ipynb
+++ b/notebooks/10_Modelling/02_Steps/B.ipynb
@@ -2603,7 +2603,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2617,7 +2617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
