--- a/notebooks/40_Data Preprocessing/01_Dummy/B.ipynb
+++ b/notebooks/40_Data Preprocessing/01_Dummy/B.ipynb
@@ -1179,7 +1179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "work",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1193,7 +1193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
